# banterchat

./: .env.example  .gitignore  README.md  build.sh  deploy.sh  go.mod  go.sum  main.go  package-lock.json  package.json  setup.sh  tailwind.config.js
assets/public/: 404.html  appeal.html  attachment.html  botinvite.html  index.html  info.html  invite.html
bot-sdk/piplib/: .gitignore  LICENSE  README.md  pyproject.toml
bot-sdk/piplib/banterapi/: __init__.py  client.py  commands.py  embed.py  errors.py  files.py  gateway.py  helpcommand.py  http.py  intents.py  interactions.py  logger.py  models.py  pagination.py  permissions.py
clients/electron/: .gitignore  build.sh  package-lock.json  package.json  tailwind.config.js
data/: schema.sql
modules/admin/: bots.go  broadcasts.go  db.go  errors.go  handlers.go  routes.go  service.go
modules/apperr/: errors.go  http.go
modules/attachments/: attachments.go  config.go  db.go  delete.go  download.go  errors.go  queries.go  routes.go  slashcmd.go  upload.go  utils.go
modules/auditlog/: db.go  errors.go  events.go  handlers.go  list.go  routes.go  service.go
modules/auth/: auth.go  botcheck.go  broadcasts.go  config.go  db.go  errors.go  handlers.go  keyfile.go  routes.go  validation.go
modules/avatar/: avatar.go  broadcasts.go  config.go  errors.go  guild.go  routes.go  user.go
modules/banner/: banner.go  broadcasts.go  config.go  guild.go  routes.go  user.go
modules/bots/: api.go  api_apps.go  api_commands.go  api_messages.go  api_profile.go  app.go  broadcasts.go  commands.go  config.go  errors.go  (+5 more)
(+774 files in other folders)
