[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "banterbotapi"
version = "1.0.43"
description = "Python SDK for building bots on Banter (banterchat.org) — discord.py-style."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Banter", email = "contact@banterchat.org" }
]
keywords = ["banter", "bot", "chat", "sdk", "discord-py-style"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12",
]

[project.urls]
Homepage = "https://banterchat.org"
Repository = "https://banterchat.org"

[tool.setuptools]
packages = ["banterapi"]
